<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="?attr/blue_background"
    android:gravity="center_vertical"
    android:layout_height="176dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/profile_icon"
        android:layout_width="wrap_content"
        android:background="@android:color/transparent"
        android:layout_height="70dp"
        android:contentDescription="@string/todo"
        app:civ_border_width="2dp"
        app:civ_border_color="#fff"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#ffffff"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/website"
        android:textColor="#fff"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

    </TextView>


</LinearLayout>